--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -1,15 +1,34 @@
 @(title: String)(content: Html)
 
 <!DOCTYPE html>
-
 <html>
-    <head>
-        <title>@title</title>
-        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
-        <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
-        <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
+    <head lang="en">
+        <meta charset="UTF-8">
+        <title>@title :: Commlogs</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="/assets/css/bootstrap.css" media="screen">
+        <link rel="stylesheet" href="/assets/css/overrides.css" media="screen">
     </head>
     <body>
-        @content
+        <div class="navbar navbar-default navbar-fixed-top">
+            <div class="container">
+                <div class="navbar-header">
+                    <a href="/" class="navbar-brand">Hack The Burgh Commlogs</a>
+                </div>
+                <div class="navbar-collapse collapse" id="navbar-main">
+                    <ul class="nav navbar-nav"></ul>
+                    <ul class="nav navbar-nav navbar-right">
+                        <li><a href="/assets/log.html"><span class="glyphicon glyphicon-flash" aria-hidden="true"></span>Live</a></li>
+                        <li><a href="/config"><span class="glyphicon glyphicon-wrench" aria-hidden="true"></span> Config</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            @content
+        </div>
+
+        <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+        <script src="/assets/js/bootstrap.min.js"></script>
     </body>
 </html>
