Fix paths, routing and misc. stuffs.

--- a/app/views/stars.scala.html
+++ b/app/views/stars.scala.html
@@ -1,4 +1,4 @@
-@main("Commlogs") {
+@main("Starlogs") {
 
   <script type="text/javascript" src="/assets/js/main.js"></script>
   <script type="text/javascript" src="/assets/js/log.js"></script>
