--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,5 +1,3 @@
-@(message: String)
-
 @main("Home") {
 
     <div class="jumbotron top-header">
@@ -8,16 +6,23 @@
     </div>
 
     <div class="row">
-        <div class="col-md-6 col-md-left">
+        <div class="col-md-4">
             <h1>Live</h1>
-            <p>Watch the commits, Starlogs style.</p>
-            <a href="/assets/log.html"><button class="btn btn-danger">
+            <p>Watch the commits, in a simple style.</p>
+            <a href="/log"><button class="btn btn-danger">
+                <span class="glyphicon glyphicon-th-list" aria-hidden="true"></span>
+            </button></a>
+        </div>
+        <div class="col-md-4">
+            <h1>Starlog</h1>
+            <p>Watch commits in style, in the form of Starlogs.</p>
+            <a href="/starlogs"><button class="btn btn-danger">
                 <span class="glyphicon glyphicon-flash" aria-hidden="true"></span>
             </button></a>
         </div>
-        <div class="col-md-6 col-md-right">
+        <div class="col-md-4">
             <h1>Configure</h1>
-            <p>List, add and remove repositories from the socket.</p>
+            <p>List, add and remove repositories from the socket and configure Yo integration.</p>
             <a href="/config"><button class="btn btn-danger">
                 <span class="glyphicon glyphicon-wrench" aria-hidden="true"></span>
             </button></a>
