--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -18,7 +18,8 @@
                 <div class="navbar-collapse collapse" id="navbar-main">
                     <ul class="nav navbar-nav"></ul>
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="/assets/log.html"><span class="glyphicon glyphicon-flash" aria-hidden="true"></span>Live</a></li>
+                        <li><a href="/log"><span class="glyphicon glyphicon-th-list" aria-hidden="true"></span> Live</a></li>
+                        <li><a href="/starlogs"><span class="glyphicon glyphicon-flash" aria-hidden="true"></span> Starlogs</a></li>
                         <li><a href="/config"><span class="glyphicon glyphicon-wrench" aria-hidden="true"></span> Config</a></li>
                     </ul>
                 </div>
